# FEC

./: .gitignore  .gitmodules  build.bat  clean.bat  generate_project.bat  generate_project.sh
engine/shaders/: Internal-Skinning.comp  Internal-Skinning.metal  Skybox.hlsl  Skybox.shader  pack.bat  pack.py  pack.sh  pbrMetallicRoughness.hlsl  pbrMetallicRoughness.shader  pbrSpecularGlossiness.hlsl  shaders.json
engine/shaders/include/: AppData.hlsl  Common.hlsl  DepthCommon.hlsl  PBRMeta.hlsl  ShaderVariables.hlsl
engine/shaders/shaderlab/: parser.py  shaderlab.py
engine/shaders/unity/: SceneViewSelected.shader  ScreenAlignedQuad.hlsl
engine/source/: CMakeLists.txt
engine/source/codegen/: Makefile  codegen.py  make.bat  parser.py  template.cpp
engine/source/editor/: CMakeLists.txt  editor_app.cpp  editor_app.hpp  glfw_app.cpp  glfw_app.hpp  imgui_extra.cpp  imgui_extra.hpp  main.cpp  project_selector.cpp  project_selector.hpp
engine/source/fishengine/: .clang-format  CMakeLists.txt  FishEngineExtra.js  GPUSkinning.metal  animation.c  animation.h  app.c  app.cpp  app.h  array.c  array.h  asset.c  asset.cpp  asset.h  camera.h  component.h  ddsloader.c  ddsloader.h  debug.c  debug.h  ecs.c  ecs.h  format.sh  free_camera.c  free_camera.h  fs.cpp  fs.hpp  gl-matrix.mjs  input.c  input.h  jsbinding.c  jsbinding.cpp  jsbinding.gen.cpp  jsbinding.h  jsbinding.hpp  keycode.h  light.c  light.h  main.c  main.cpp  (+35 more)
engine/source/tools/: CMakeLists.txt
engine/source/tools/hlslreflect/: CMakeLists.txt  main.cpp
engine/source/tools/shaderlab/: lexer.py  shaderlab.py
samples/gltfviewer/assets/: FreeCamera.js  glTFLoader.js  index.js  pbrMetallicRoughness.hlsl  pbrMetallicRoughness.shader  utils.js
